tomcatdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tomcat
  name: tomcat
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tomcat
    spec:
      containers:
        - image: hub.c.163.com/library/tomcat:latest
          imagePullPolicy: IfNotPresent
          name: tomcat
          ports:
            - containerPort: 8080
          resources: {}
