ingressgateway80.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway80
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*' # 可以使用IP地址来访问入口网关, 如果配置为具体域名, 需要修改hosts文件(真实域名需要修改A记录)
