destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customers-destination
spec:
  host: customers.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN # 将负载均衡酸非设置为轮询方式
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
